2003-09-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* auto* files: Updated to newer auto* tool versions

2003-09-01 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Updated version to 20030901

2003-05-25 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Disabled the LIBTOOL macro since it is unused.

	* config.rpath: Added this missing file.

	* pixmaps/Makefile.am: For now, do not install the pixmap since it
	is unused.  

	* Makefile.am: For now, do not install the various README like files.
	Eventually this will be put back, for the 20030525 release, these
	files will not be installed.

2003-05-22 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Updated version

2003-01-26 Ales Hvezda   <ahvezda@geda.seul.org>

        * po/ru.po: Added ru.po from Andy Shevchenko

=== 0.2 ===

Released january 13, 2003.

As version 0.1 has appeared to be totally not functional, this is a first
version that can be used be users. It has only basic functions to manage
projects, files and run tools. Commonly used actions are accessible from
the menu. 

Do not expect that everything will work good together. Major problems are
with:

* PCB - in RedHat distribution m4 is located not in /usr/local/bin what
  is default location used by PCB, gnetlisted schematics are not loaded
  by PCB. 
  
* gwave - can display only transient results.

* verilog - problems with simulation "multifile" modules.

etc.

=== 0.1 ===

First attempt.
