@@ -1,3 +1,8 @@
+2003-09-21 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* po/pt_BR.po, src/Makefile.am: Integrated Antonio's pt_BR
+	translation.
+
 2003-09-20 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* auto* files: Updated to newer auto* tool versions
